# mpfw_code_main_tst_20240619main

./: LICENSED_CODE  LICENSES_THIRD_PARTY  LICENSE_HEADER
src/mac/Src/: main.cpp  main.h
src/nxp/Inc/: FreeRTOSConfig.h
src/nxp/Src/: LPC54608_tst_freertos.cpp  LPC54608_tst_freertos_fw2.cpp  LPC54608_tst_freertos_original.cpp  ds3231.c  ds3231.h  ds3231_low_level.c  freertos.c
src/stm32f769_disco/Inc/interrupt/: stm32f7xx_it.h
src/stm32f769_disco/Inc/sdk_conf/: stm32f7xx_hal_conf.h
src/stm32f769_disco/Inc/uart/: sdk_uart_conf.h
src/stm32f769_disco/Src/: main.cpp
src/stm32f769_disco/Src/freertos/: freertos.c
src/stm32f769_disco/Src/interrupt/: stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
src/stm32f769_disco/Src/uart/: stm32f7xx_hal_msp.c
wsp/cmake/: .gitignore
wsp/cmake/project/common/v_02/: 01_set_code_build_dirs.cmake  02_include_dependencies.cmake  03_set_inc_dirs.cmake  CMakeLists.txt
wsp/cmake/project/common/v_02/public/: 01_set_root_dirs.cmake  02_set_prj_dir.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/apps/mpfw_code_apps_tst_20240619app/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_core_core/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_core/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_core/nxp/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_resources/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_resources/mac/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_resources/nxp/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_fw2_wrapper_resources/stm32f769_disco/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_sdk_mac/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_sdk_nxp/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/libs/mpfw_code_libs_sdk_stm32f769_disco/: set_class_src_ver.cmake
wsp/cmake/project/common/v_02/public/src_ver_modules/main/mpfw_code_main_tst_20240619main/: set_class_src_ver.cmake
wsp/cmake/project/mac/: set_cpp_files.cmake  set_dev_environment_build_dir.cmake
wsp/cmake/project/nxp/: set_cpp_files.cmake  set_dev_environment_build_dir.cmake
wsp/cmake/project/stm32f769_disco/: set_cpp_files.cmake  (+1 more)
(+18 files in other folders)
